tests/snapshots/examples_fixtures/type_system__failing__194_effect_row_multi_missing_deterministic_e400.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `call_requires_clock_console` requires effects `Clock, Console` in this function signature.

  examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx:34:5
   |
34 |     call_requires_clock_console(worker)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     --------------------------- effectful call occurs here

Hint:
  Add `with Clock, Console` to the enclosing function.
== stdout ==
<not executed>
